Fix about-container alignment on smaller screens

--- a/styles/res.css
+++ b/styles/res.css
@@ -144,8 +144,10 @@
 
     .about-container{
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
+        /* flex-wrap: wrap; */
+        place-content: center;
+        place-items: center;
         width: 100%;
         min-height: 100vh;
         max-height: 200%;
@@ -153,6 +155,8 @@
         padding: 10px;
     }
     .me{
+        display: flex;
+        place-content: center;
         font-size: 1rem;
         max-width: 100%;
         width: 100vw;
